--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
           </div>
         </div>
       </nav>
-      <img src="../WEB TANJIRO/imagenes/logotanjiro.svg" alt="tanjiro" class="logo-grande">
+      <img src="./imagenes/logotanjiro.svg" alt="tanjiro" class="logo-grande">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../WEB TANJIRO/imagenes/image1carrusel.svg" class="d-block w-100 h-80" alt="carousel">
+            <img src="./imagenes/image1carrusel.svg" class="d-block w-100 h-80" alt="carousel">
           </div>
           <div class="carousel-item">
-            <img src="../WEB TANJIRO/imagenes/carrusel2.jpeg" class="d-block w-100 h-80" alt="carousel">
+            <img src="./imagenes/carrusel2.jpeg" class="d-block w-100 h-80" alt="carousel">
           </div>
           <div class="carousel-item">
-            <img src="../WEB TANJIRO/imagenes/tokyocarrusel3.jpg" class="d-block w-100 h-80" alt="carousel">
+            <img src="./imagenes/tokyocarrusel3.jpg" class="d-block w-100 h-80" alt="carousel">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -75,7 +75,7 @@
             </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-              <img src="../WEB TANJIRO/imagenes/imgtokio.svg" class="card-img-top" alt="imagen tokio ghoul">
+              <img src="./imagenes/imgtokio.svg" class="card-img-top" alt="imagen tokio ghoul">
               <div class="card-body">
                 <h5 class="card-title">Tokio Ghoul</h5>
                 <p class="card-text">Adaptación al anime producida por Studio Pierrot, basada en el manga que le da nombre.</p>
