--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img src="./imagenes/carrusel2.jpeg" class="d-block w-100 h-80" alt="carousel">
           </div>
           <div class="carousel-item">
-            <img src="./imagenes/carrusel2.jpeg" class="d-block w-100 h-80" alt="carousel">
+            <img src="./imagenes/tokyocarrusel3.jpg" class="d-block w-100 h-80" alt="carousel">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
